simple message & counter starter practise

--- a/counter-starter/index.html
+++ b/counter-starter/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
-        <title>Counter</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
 
-    <body>
-        <div id="wrapper">
-            <p id="number">0</p>
-            <div id="button-wrapper"></div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Counter</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <div id="wrapper">
+        <p id="number">0</p>
+        <div id="button-wrapper">
+            <input type="button" value="+1" id="addition" onclick="add(2)" />
+            <input type="button" value="+10" id="addition" onclick="add(10)" />
+            <input type="button" value="-1" id="subtraction" onclick="subtract(2)" />
+            <input type="button" value="-10" id="subtraction" onclick="subtract(10)" />
+            <input type="button" value="-1" id="mult" onclick="subtract(2)" />
+            <input type="button" value="-10" id="subtraction" onclick="subtract(10)" />
+            <input type="button" value="-1" id="subtraction" onclick="subtract(2)" />
+            <input type="button" value="-10" id="subtraction" onclick="subtract(10)" />
         </div>
-    </body>
+    </div>
+    <script src="script.js"></script>
+</body>
+
 </html>
