practising of js

--- a/counter-starter/index.html
+++ b/counter-starter/index.html
@@ -13,14 +13,12 @@
     <div id="wrapper">
         <p id="number">0</p>
         <div id="button-wrapper">
-            <input type="button" value="+1" id="addition" onclick="add(2)" />
+            <input type="button" value="+1" id="addition" onclick="add(1)" />
             <input type="button" value="+10" id="addition" onclick="add(10)" />
-            <input type="button" value="-1" id="subtraction" onclick="subtract(2)" />
+            <input type="button" value="-1" id="subtraction" onclick="subtract(1)" />
             <input type="button" value="-10" id="subtraction" onclick="subtract(10)" />
-            <input type="button" value="-1" id="mult" onclick="subtract(2)" />
-            <input type="button" value="-10" id="subtraction" onclick="subtract(10)" />
-            <input type="button" value="-1" id="subtraction" onclick="subtract(2)" />
-            <input type="button" value="-10" id="subtraction" onclick="subtract(10)" />
+            <input type="button" value="x2" id="multiply" onclick="multiply(2)" />
+            <input type="button" value="/2" id="divide" onclick="divide(2)" />
         </div>
     </div>
     <script src="script.js"></script>
